--- a/vite-project/src/Components/Hero/Hero.css
+++ b/vite-project/src/Components/Hero/Hero.css
@@ -53,6 +53,9 @@
     border-radius: 50px;
     border: 2px solid #fff;
     cursor: pointer;
+    color: white ;
+    text-decoration: none;
+    
 }
 .hero_connect:hover{
     border: 2px solid #fff;
