--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,3 +1,11 @@
 .body{
     background-color: aquamarine;
 }
+.whatsapp{
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    font-size: 50px;
+    color: green;
+    z-index: 100;
+}
